website/docs/v0.16.2/en/guide/installation.mdx
---
title: Installation and upgrades
description: Install matching A3S Test CLI and Agent Skill versions, with optional version, agent, and destination controls.
---

:::warning Historical snapshot
This page documents v0.16.2. Switch to the current version for active guidance.
:::

# Installation and upgrades

Run the command below to install both the A3S Test CLI and a matching Agent Skill. The installer detects the current platform, downloads the prebuilt archive, and verifies its SHA-256. Run the same command again to upgrade.

## macOS and Linux

```bash
curl -fsSL https://github.com/A3S-Lab/Test/releases/latest/download/install.sh | sh
```

Target Codex explicitly:

```bash
curl -fsSL https://github.com/A3S-Lab/Test/releases/latest/download/install.sh |
  sh -s -- --agent codex
```

Pin a version:

```bash
curl -fsSL https://github.com/A3S-Lab/Test/releases/latest/download/install.sh |
  sh -s -- --version v0.16.2
```

## Windows PowerShell

```powershell
& ([scriptblock]::Create((irm 'https://github.com/A3S-Lab/Test/releases/latest/download/install.ps1')))
```

Select an agent or version:

```powershell
& ([scriptblock]::Create((irm 'https://github.com/A3S-Lab/Test/releases/latest/download/install.ps1'))) -Agent codex
& ([scriptblock]::Create((irm 'https://github.com/A3S-Lab/Test/releases/latest/download/install.ps1'))) -Version v0.16.2
```

## Supported agent targets

| Tool                          | Target           | Default user directory       |
| ----------------------------- | ---------------- | ---------------------------- |
| A3S Code                      | `a3s-code`       | `~/.a3s/skills`              |
| Codex                         | `codex`          | `~/.codex/skills`            |
| Claude Code                   | `claude-code`    | `~/.claude/skills`           |
| Cursor                        | `cursor`         | `~/.cursor/skills`           |
| Gemini CLI                    | `gemini-cli`     | `~/.gemini/skills`           |
| GitHub Copilot CLI            | `github-copilot` | `~/.copilot/skills`          |
| OpenCode                      | `opencode`       | `~/.config/opencode/skills`  |
| Cline                         | `cline`          | `~/.cline/skills`            |
| Roo Code                      | `roo`            | `~/.roo/skills`              |
| Windsurf                      | `windsurf`       | `~/.codeium/windsurf/skills` |
| Agent Skills-compatible tools | `universal`      | `~/.agents/skills`           |

`auto` installs only for detected tools and falls back to the universal directory. `all` targets every supported directory. The installers also accept `--skill-only`, `--cli-only`, `--install-dir`, and `--skill-dir`, with corresponding PascalCase PowerShell parameters.

## Other installation paths

Build the CLI from a Git tag:

```bash
cargo install --git https://github.com/A3S-Lab/Test \
  --tag v0.16.2 --locked a3s-test-cli
```

Each release also contains `a3s-test.skill`, platform archives, checksum files, the Test Kit package, and an immutable Linux runner image reference. Do not bypass checksums or replace the released image digest with a floating tag.
